Improved tasks resolving handler
