# internal/app/crowd/api/v1/resolve_tasks_by_project.go
@@ -4,8 +4,11 @@ import (
 	"context"
 	ucerrors "github.com/Flak34/crowd-api/internal/errors/usecase_errors"
 	"github.com/Flak34/crowd-api/internal/pb/crowd-api-v1"
+	model "github.com/Flak34/crowd-api/internal/task/model"
+	"github.com/samber/lo"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
 func (i *Implementation) ResolveTasksByProject(
@@ -16,13 +19,13 @@ func (i *Implementation) ResolveTasksByProject(
 		return nil, status.Error(codes.InvalidArgument, "Project and user must be specified")
 	}
 	res, err := i.taskService.ResolveUserTasksByProject(ctx, int(req.ProjectId), int(req.UserId))
-	_ = res
 	if err != nil {
 		return nil, ucerrors.MapToGRPC(err)
 	}
 	return &crowd_api_v1.ResolveTasksByProjectResponse{
-		//Tasks: lo.Map(res, func(task model.Task, _ int) *crowd_api_v1.UserTask {
-		//	//return mapTaskModelToProto(task)
-		//}),
+		Tasks: lo.Map(res.ReservedTasks, func(task model.Task, _ int) *crowd_api_v1.AnnotatorTask {
+			return mapTaskModelToProto(task)
+		}),
+		AnnotationDeadline: timestamppb.New(res.AnnotationDeadline),
 	}, nil
 }
